--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,9 +32,9 @@
         <h2>Наші послуги та партнери</h2>
         <article>
             <p>Технічне обслуговування</p>
-            <img src="img/ігорчик.jpg" alt="Технічне обслуговування">
+            <img src="img/технічне обслуговування.JPG\" alt="Технічне обслуговування">
             <p>Вихлопні системи</p>
-            <img src="img/db[kjg.jpg" alt="Вихлопні системи">
+            <img src="img/вихлопні системи.jpg" alt="Вихлопні системи">
             <p>Наші партнери</p>
             <img src="img/масла.jpg" alt="Наші партнери">
         </article>
