--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h2>Наші послуги та партнери</h2>
         <article>
             <p>Технічне обслуговування</p>
-            <img src="img/технічне обслуговування.JPG\" alt="Технічне обслуговування">
+            <img src="img/технічне обслуговування.JPG" alt="Технічне обслуговування">
             <p>Вихлопні системи</p>
             <img src="img/вихлопні системи.jpg" alt="Вихлопні системи">
             <p>Наші партнери</p>
@@ -43,11 +43,11 @@
             <p>Audi SQ7</p>
             <img src="img/q7.jpg" alt="Audi SQ7">
             <p>Audi S4</p>
-            <img src="img/s4.jpg" alt="Audi S4">
+            <img src="img/s5.jpg" alt="Audi S5">
             <p>BMW M4</p>
             <img src="img/m4.jpg" alt="BMW M4">
-            <p>Jetta 6 GLI</p>
-            <img src="img/gli.jpg" alt="Jetta 6 GLI">
+            <p>BMW G20 340I</p>
+            <img src="img/340i.JPG" alt="BMW G20 340I">
             <p>Audi A6 3.0 Supercharger</p>
             <img src="img/A6.jpg" alt="Audi A6 3.0 Supercharger">
             <p>BMW G30 540i</p>
